--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -577,8 +577,20 @@ video {
   top: -0.75rem;
 }
 
+.tw--bottom-10 {
+  bottom: -2.5rem;
+}
+
+.tw-bottom-0 {
+  bottom: 0px;
+}
+
 .tw-left-0 {
   left: 0px;
+}
+
+.tw-left-1\/2 {
+  left: 50%;
 }
 
 .tw-right-0 {
@@ -589,8 +601,8 @@ video {
   right: 500px;
 }
 
-.tw-bottom-0 {
-  bottom: 0px;
+.tw-top-0 {
+  top: 0px;
 }
 
 .tw-top-4 {
@@ -614,11 +626,6 @@ video {
   margin-right: auto;
 }
 
-.tw-my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .tw-my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -639,6 +646,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.tw-my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .tw-mb-4 {
   margin-bottom: 1rem;
 }
@@ -651,8 +663,20 @@ video {
   margin-top: 0.5rem;
 }
 
+.tw-mt-4 {
+  margin-top: 1rem;
+}
+
 .tw-mt-8 {
   margin-top: 2rem;
+}
+
+.tw-mt-\[260px\] {
+  margin-top: 260px;
+}
+
+.tw-mt-auto {
+  margin-top: auto;
 }
 
 .tw-block {
@@ -687,6 +711,10 @@ video {
   height: 50%;
 }
 
+.tw-h-28 {
+  height: 7rem;
+}
+
 .tw-h-5 {
   height: 1.25rem;
 }
@@ -707,20 +735,28 @@ video {
   height: 210px;
 }
 
-.tw-h-\[350px\] {
-  height: 350px;
+.tw-h-\[250px\] {
+  height: 250px;
+}
+
+.tw-h-\[360px\] {
+  height: 360px;
 }
 
 .tw-h-\[60px\] {
   height: 60px;
 }
 
-.tw-h-full {
-  height: 100%;
+.tw-h-\[60vh\] {
+  height: 60vh;
 }
 
-.tw-h-\[250px\] {
-  height: 250px;
+.tw-h-\[90px\] {
+  height: 90px;
+}
+
+.tw-h-full {
+  height: 100%;
 }
 
 .tw-w-10 {
@@ -735,20 +771,17 @@ video {
   width: 2rem;
 }
 
+.tw-w-\[84rem\] {
+  width: 84rem;
+}
+
+.tw-w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .tw-w-full {
   width: 100%;
-}
-
-.tw-min-w-\[5rem\] {
-  min-width: 5rem;
-}
-
-.tw-max-w-\[768px\] {
-  max-width: 768px;
-}
-
-.tw-max-w-\[900px\] {
-  max-width: 900px;
 }
 
 .tw-max-w-4xl {
@@ -759,13 +792,42 @@ video {
   max-width: 64rem;
 }
 
+.tw-max-w-6xl {
+  max-width: 72rem;
+}
+
+.tw-max-w-\[768px\] {
+  max-width: 768px;
+}
+
+.tw-max-w-\[900px\] {
+  max-width: 900px;
+}
+
+.tw-max-w-sm {
+  max-width: 24rem;
+}
+
+.tw-max-w-xs {
+  max-width: 20rem;
+}
+
 .tw-flex-1 {
   flex: 1 1 0%;
+}
+
+.tw--translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-translate-y-6 {
   --tw-translate-y: 1.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-cursor-pointer {
+  cursor: pointer;
 }
 
 .tw-list-inside {
@@ -812,12 +874,12 @@ video {
   justify-content: center;
 }
 
-.tw-gap-1 {
-  gap: 0.25rem;
+.tw-justify-around {
+  justify-content: space-around;
 }
 
-.tw-gap-5 {
-  gap: 1.25rem;
+.tw-gap-1 {
+  gap: 0.25rem;
 }
 
 .tw-gap-2 {
@@ -828,12 +890,34 @@ video {
   gap: 1rem;
 }
 
+.tw-gap-5 {
+  gap: 1.25rem;
+}
+
 .tw-gap-6 {
   gap: 1.5rem;
 }
 
 .tw-gap-8 {
   gap: 2rem;
+}
+
+.tw-space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.tw-space-x-\[1px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1px * var(--tw-space-x-reverse));
+  margin-left: calc(1px * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.tw-space-y-16 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(4rem * var(--tw-space-y-reverse));
 }
 
 .tw-space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -860,14 +944,20 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.tw-space-y-16 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(4rem * var(--tw-space-y-reverse));
+.tw-self-end {
+  align-self: flex-end;
 }
 
 .tw-overflow-hidden {
   overflow: hidden;
+}
+
+.tw-rounded {
+  border-radius: 0.25rem;
+}
+
+.tw-rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .tw-rounded-md {
@@ -878,8 +968,14 @@ video {
   border-radius: 0.125rem;
 }
 
-.tw-rounded {
-  border-radius: 0.25rem;
+.tw-rounded-l-sm {
+  border-top-left-radius: 0.125rem;
+  border-bottom-left-radius: 0.125rem;
+}
+
+.tw-rounded-r-sm {
+  border-top-right-radius: 0.125rem;
+  border-bottom-right-radius: 0.125rem;
 }
 
 .tw-rounded-bl-md {
@@ -914,14 +1010,23 @@ video {
   border-right-width: 1px;
 }
 
-.tw-border-primary {
+.tw-border-black {
   --tw-border-opacity: 1;
-  border-color: rgb(65 105 225 / var(--tw-border-opacity));
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .tw-border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.tw-border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(65 105 225 / var(--tw-border-opacity));
+}
+
+.tw-bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
 }
 
 .tw-bg-gray-100 {
@@ -944,9 +1049,27 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
+.tw-bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.tw-bg-neutral-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
 .tw-bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(65 105 225 / var(--tw-bg-opacity));
+}
+
+.tw-bg-slate-100\/80 {
+  background-color: rgb(241 245 249 / 0.8);
+}
+
+.tw-bg-transparent {
+  background-color: transparent;
 }
 
 .tw-bg-white {
@@ -958,8 +1081,46 @@ video {
   background-color: rgb(255 255 255 / 0.7);
 }
 
-.tw-bg-transparent {
-  background-color: transparent;
+.tw-bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+
+.tw-bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.tw-bg-\[url\(\'\.\.\/src\/assets\/images\/2\.jpg\'\)\] {
+  background-image: url('../src/assets/images/2.jpg');
+}
+
+.tw-bg-\[url\(\'\.\.\/src\/assets\/images\/faded-waves\.jpg\'\)\] {
+  background-image: url('../src/assets/images/faded-waves.jpg');
+}
+
+.tw-bg-\[url\(\'\.\.\/src\/assets\/images\/us_background\.jpg\'\)\] {
+  background-image: url('../src/assets/images/us_background.jpg');
+}
+
+.tw-bg-cover {
+  background-size: cover;
+}
+
+.tw-bg-center {
+  background-position: center;
+}
+
+.tw-bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.tw-fill-gray-400 {
+  fill: #9ca3af;
+}
+
+.tw-fill-gray-500 {
+  fill: #6b7280;
 }
 
 .tw-fill-primary {
@@ -980,28 +1141,28 @@ video {
      object-position: center;
 }
 
-.tw-p-10 {
-  padding: 2.5rem;
-}
-
-.tw-p-7 {
-  padding: 1.75rem;
-}
-
-.tw-p-4 {
-  padding: 1rem;
-}
-
 .tw-p-0 {
   padding: 0px;
+}
+
+.tw-p-1 {
+  padding: 0.25rem;
+}
+
+.tw-p-2 {
+  padding: 0.5rem;
 }
 
 .tw-p-3 {
   padding: 0.75rem;
 }
 
-.tw-p-1 {
-  padding: 0.25rem;
+.tw-p-4 {
+  padding: 1rem;
+}
+
+.tw-p-7 {
+  padding: 1.75rem;
 }
 
 .tw-px-1 {
@@ -1019,6 +1180,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.tw-px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .tw-px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1029,9 +1195,19 @@ video {
   padding-right: 1.25rem;
 }
 
+.tw-px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .tw-px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.tw-px-px {
+  padding-left: 1px;
+  padding-right: 1px;
 }
 
 .tw-py-0 {
@@ -1054,6 +1230,11 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.tw-py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .tw-py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1064,33 +1245,22 @@ video {
   padding-bottom: 1rem;
 }
 
+.tw-py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .tw-py-\[4\.5rem\] {
   padding-top: 4.5rem;
   padding-bottom: 4.5rem;
 }
 
-.tw-px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.tw-px-px {
-  padding-left: 1px;
-  padding-right: 1px;
-}
-
-.tw-px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.tw-py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 .tw-pb-3 {
   padding-bottom: 0.75rem;
+}
+
+.tw-pt-2 {
+  padding-top: 0.5rem;
 }
 
 .tw-pt-20 {
@@ -1101,12 +1271,12 @@ video {
   padding-top: 1.75rem;
 }
 
-.tw-pt-2 {
-  padding-top: 0.5rem;
-}
-
 .tw-text-center {
   text-align: center;
+}
+
+.tw-text-start {
+  text-align: start;
 }
 
 .tw-text-2xl {
@@ -1124,9 +1294,19 @@ video {
   line-height: 2.5rem;
 }
 
+.tw-text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .tw-text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.tw-text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .tw-text-xs {
@@ -1134,14 +1314,8 @@ video {
   line-height: 1rem;
 }
 
-.tw-text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.tw-text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.tw-font-black {
+  font-weight: 900;
 }
 
 .tw-font-bold {
@@ -1152,8 +1326,8 @@ video {
   font-weight: 600;
 }
 
-.tw-font-black {
-  font-weight: 900;
+.tw-capitalize {
+  text-transform: capitalize;
 }
 
 .tw-leading-5 {
@@ -1162,6 +1336,10 @@ video {
 
 .tw-leading-7 {
   line-height: 1.75rem;
+}
+
+.tw-leading-tight {
+  line-height: 1.25;
 }
 
 .tw-tracking-tight {
@@ -1173,19 +1351,9 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.tw-text-gray-600 {
+.tw-text-gray-400 {
   --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.tw-text-primary {
-  --tw-text-opacity: 1;
-  color: rgb(65 105 225 / var(--tw-text-opacity));
-}
-
-.tw-text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .tw-text-gray-500 {
@@ -1193,9 +1361,29 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.tw-text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.tw-text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.tw-text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
 .tw-text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.tw-text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(65 105 225 / var(--tw-text-opacity));
 }
 
 .tw-text-red-500 {
@@ -1203,9 +1391,9 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.tw-text-gray-400 {
+.tw-text-white {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .tw-shadow-lg {
@@ -1218,6 +1406,24 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.tw-shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.tw-backdrop-blur-\[0\.3px\] {
+  --tw-backdrop-blur: blur(0.3px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.tw-backdrop-blur-md {
+  --tw-backdrop-blur: blur(12px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .tw-transition {
@@ -1234,6 +1440,12 @@ video {
   transition-duration: 150ms;
 }
 
+.tw-transition-shadow {
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .tw-duration-300 {
   transition-duration: 300ms;
 }
@@ -1244,6 +1456,24 @@ video {
 
 .marker\:tw-text-primary::marker {
   color: rgb(65 105 225 );
+}
+
+.placeholder\:tw-capitalize::-moz-placeholder {
+  text-transform: capitalize;
+}
+
+.placeholder\:tw-capitalize::placeholder {
+  text-transform: capitalize;
+}
+
+.placeholder\:\!tw-text-gray-900::-moz-placeholder {
+  --tw-text-opacity: 1 !important;
+  color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
+}
+
+.placeholder\:\!tw-text-gray-900::placeholder {
+  --tw-text-opacity: 1 !important;
+  color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
 }
 
 .before\:tw-absolute::before {
@@ -1342,6 +1572,17 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:tw-shadow-xl:hover {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:tw-shadow-gray-300:hover {
+  --tw-shadow-color: #d1d5db;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .focus\:tw-outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1360,6 +1601,24 @@ video {
   line-height: 1rem;
 }
 
+@media (min-width: 640px) {
+  .sm\:tw-mt-\[190px\] {
+    margin-top: 190px;
+  }
+
+  .sm\:tw-w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .sm\:tw-max-w-xs {
+    max-width: 20rem;
+  }
+
+  .sm\:tw-justify-center {
+    justify-content: center;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:tw-absolute {
     position: absolute;
@@ -1368,6 +1627,10 @@ video {
   .md\:tw-mx-8 {
     margin-left: 2rem;
     margin-right: 2rem;
+  }
+
+  .md\:tw-mt-\[200px\] {
+    margin-top: 200px;
   }
 
   .md\:tw-block {
@@ -1394,12 +1657,12 @@ video {
     height: 100%;
   }
 
-  .md\:tw-w-\[210px\] {
-    width: 210px;
-  }
-
   .md\:tw-w-2\/3 {
     width: 66.666667%;
+  }
+
+  .md\:tw-w-\[210px\] {
+    width: 210px;
   }
 
   .md\:tw-grid-cols-2 {
@@ -1434,6 +1697,12 @@ video {
     gap: 0.75rem;
   }
 
+  .md\:tw-space-x-20 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(5rem * var(--tw-space-x-reverse));
+    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .md\:tw-space-y-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
@@ -1458,6 +1727,13 @@ video {
   }
 }
 
+@media (min-width: 1024px) {
+  .lg\:tw-my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+}
+
 .\[\&\>button\]\:tw-rounded>button {
   border-radius: 0.25rem;
 }
@@ -1468,15 +1744,7 @@ video {
 }
 
 @media (min-width: 768px) {
-  .\[\&\>div\:nth--child\(even\)\]\:md\:tw-bg-gray-500\/50>div:nth--child(even) {
-    background-color: rgb(107 114 128 / 0.5);
-  }
-
   .\[\&\>div\:nth-child\(even\)\]\:md\:tw-bg-gray-500\/50>div:nth-child(even) {
-    background-color: rgb(107 114 128 / 0.5);
-  }
-
-  .\[\&\>div\:nttw-h-child\(even\)\]\:md\:tw-bg-gray-500\/50>div:nttw-h-child(even) {
     background-color: rgb(107 114 128 / 0.5);
   }
 }
@@ -1509,10 +1777,6 @@ video {
 
   .first\:\[\&\>div\>div\]\:md\:tw-hidden>div>div:first-child {
     display: none;
-  }
-
-  .last\:\[\&\>div\>div\]\:md\:tw-invisible>div>div:last-child {
-    visibility: hidden;
   }
 
   .last\:\[\&\>div\>div\]\:md\:tw-hidden>div>div:last-child {
