--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -679,6 +679,22 @@ video {
   margin-top: auto;
 }
 
+.tw-mt-5 {
+  margin-top: 1.25rem;
+}
+
+.tw-mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.tw-mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.tw-mb-9 {
+  margin-bottom: 2.25rem;
+}
+
 .tw-block {
   display: block;
 }
@@ -701,6 +717,10 @@ video {
 
 .tw-hidden {
   display: none;
+}
+
+.tw-aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
 .tw-h-10 {
@@ -759,6 +779,26 @@ video {
   height: 100%;
 }
 
+.tw-h-16 {
+  height: 4rem;
+}
+
+.tw-h-80 {
+  height: 20rem;
+}
+
+.tw-h-\[500px\] {
+  height: 500px;
+}
+
+.tw-h-12 {
+  height: 3rem;
+}
+
+.tw-h-\[300px\] {
+  height: 300px;
+}
+
 .tw-w-10 {
   width: 2.5rem;
 }
@@ -814,6 +854,14 @@ video {
 
 .tw-flex-1 {
   flex: 1 1 0%;
+}
+
+.tw-basis-1\/4 {
+  flex-basis: 25%;
+}
+
+.tw-basis-full {
+  flex-basis: 100%;
 }
 
 .tw--translate-x-1\/2 {
@@ -902,6 +950,10 @@ video {
   gap: 2rem;
 }
 
+.tw-gap-3 {
+  gap: 0.75rem;
+}
+
 .tw-space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -976,6 +1028,11 @@ video {
 .tw-rounded-r-sm {
   border-top-right-radius: 0.125rem;
   border-bottom-right-radius: 0.125rem;
+}
+
+.tw-rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 .tw-rounded-bl-md {
@@ -1165,6 +1222,10 @@ video {
   padding: 1.75rem;
 }
 
+.tw-p-5 {
+  padding: 1.25rem;
+}
+
 .tw-px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1255,6 +1316,11 @@ video {
   padding-bottom: 4.5rem;
 }
 
+.tw-py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .tw-pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -1324,6 +1390,10 @@ video {
 
 .tw-font-semibold {
   font-weight: 600;
+}
+
+.tw-font-extrabold {
+  font-weight: 800;
 }
 
 .tw-capitalize {
@@ -1614,6 +1684,22 @@ video {
     max-width: 20rem;
   }
 
+  .sm\:tw-basis-1\/4 {
+    flex-basis: 25%;
+  }
+
+  .sm\:tw-basis-1\/3 {
+    flex-basis: 33.333333%;
+  }
+
+  .sm\:tw-basis-1\/2 {
+    flex-basis: 50%;
+  }
+
+  .sm\:tw-flex-row {
+    flex-direction: row;
+  }
+
   .sm\:tw-justify-center {
     justify-content: center;
   }
@@ -1663,6 +1749,14 @@ video {
 
   .md\:tw-w-\[210px\] {
     width: 210px;
+  }
+
+  .md\:tw-basis-1\/4 {
+    flex-basis: 25%;
+  }
+
+  .md\:tw-basis-1\/3 {
+    flex-basis: 33.333333%;
   }
 
   .md\:tw-grid-cols-2 {
@@ -1731,6 +1825,10 @@ video {
   .lg\:tw-my-10 {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
+  }
+
+  .lg\:tw-basis-1\/4 {
+    flex-basis: 25%;
   }
 }
 
@@ -1858,4 +1956,12 @@ video {
     --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
+}
+
+.\[\&_svg\]\:tw-fill-primary svg {
+  fill: royalblue;
+}
+
+.\[\&_svg\]\:\!tw-fill-primary svg {
+  fill: royalblue !important;
 }
