--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -568,6 +568,10 @@ video {
   position: relative;
 }
 
+.tw-inset-0 {
+  inset: 0px;
+}
+
 .tw-inset-y-0 {
   top: 0px;
   bottom: 0px;
@@ -609,6 +613,10 @@ video {
   top: 1rem;
 }
 
+.tw-top-\[30\%\] {
+  top: 30%;
+}
+
 .tw-z-10 {
   z-index: 10;
 }
@@ -619,6 +627,11 @@ video {
 
 .tw-m-0\.5 {
   margin: 0.125rem;
+}
+
+.tw-mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .tw-mx-auto {
@@ -651,6 +664,10 @@ video {
   margin-bottom: 2rem;
 }
 
+.tw-mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .tw-mb-4 {
   margin-bottom: 1rem;
 }
@@ -659,12 +676,20 @@ video {
   margin-bottom: 2rem;
 }
 
+.tw-mb-9 {
+  margin-bottom: 2.25rem;
+}
+
 .tw-mt-2 {
   margin-top: 0.5rem;
 }
 
 .tw-mt-4 {
   margin-top: 1rem;
+}
+
+.tw-mt-5 {
+  margin-top: 1.25rem;
 }
 
 .tw-mt-8 {
@@ -677,22 +702,6 @@ video {
 
 .tw-mt-auto {
   margin-top: auto;
-}
-
-.tw-mt-5 {
-  margin-top: 1.25rem;
-}
-
-.tw-mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.tw-mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.tw-mb-9 {
-  margin-bottom: 2.25rem;
 }
 
 .tw-block {
@@ -727,6 +736,10 @@ video {
   height: 2.5rem;
 }
 
+.tw-h-16 {
+  height: 4rem;
+}
+
 .tw-h-2\/4 {
   height: 50%;
 }
@@ -735,8 +748,16 @@ video {
   height: 7rem;
 }
 
+.tw-h-48 {
+  height: 12rem;
+}
+
 .tw-h-5 {
   height: 1.25rem;
+}
+
+.tw-h-6 {
+  height: 1.5rem;
 }
 
 .tw-h-8 {
@@ -759,6 +780,10 @@ video {
   height: 250px;
 }
 
+.tw-h-\[300px\] {
+  height: 300px;
+}
+
 .tw-h-\[360px\] {
   height: 360px;
 }
@@ -779,26 +804,6 @@ video {
   height: 100%;
 }
 
-.tw-h-16 {
-  height: 4rem;
-}
-
-.tw-h-80 {
-  height: 20rem;
-}
-
-.tw-h-\[500px\] {
-  height: 500px;
-}
-
-.tw-h-12 {
-  height: 3rem;
-}
-
-.tw-h-\[300px\] {
-  height: 300px;
-}
-
 .tw-w-10 {
   width: 2.5rem;
 }
@@ -807,8 +812,16 @@ video {
   width: 1.25rem;
 }
 
+.tw-w-6 {
+  width: 1.5rem;
+}
+
 .tw-w-8 {
   width: 2rem;
+}
+
+.tw-w-96 {
+  width: 24rem;
 }
 
 .tw-w-\[84rem\] {
@@ -856,10 +869,6 @@ video {
   flex: 1 1 0%;
 }
 
-.tw-basis-1\/4 {
-  flex-basis: 25%;
-}
-
 .tw-basis-full {
   flex-basis: 100%;
 }
@@ -871,6 +880,15 @@ video {
 
 .tw-translate-y-6 {
   --tw-translate-y: 1.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -922,6 +940,10 @@ video {
   justify-content: center;
 }
 
+.tw-justify-between {
+  justify-content: space-between;
+}
+
 .tw-justify-around {
   justify-content: space-around;
 }
@@ -948,10 +970,6 @@ video {
 
 .tw-gap-8 {
   gap: 2rem;
-}
-
-.tw-gap-3 {
-  gap: 0.75rem;
 }
 
 .tw-space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -994,6 +1012,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.tw-space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
 .tw-self-end {
@@ -1059,12 +1083,20 @@ video {
   border-width: 2px;
 }
 
+.tw-border-b-\[2px\] {
+  border-bottom-width: 2px;
+}
+
 .tw-border-l-\[8px\] {
   border-left-width: 8px;
 }
 
 .tw-border-r {
   border-right-width: 1px;
+}
+
+.tw-border-t-\[2px\] {
+  border-top-width: 2px;
 }
 
 .tw-border-black {
@@ -1099,11 +1131,6 @@ video {
 .tw-bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.tw-bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .tw-bg-green-500 {
@@ -1156,8 +1183,20 @@ video {
   background-image: url('../src/assets/images/faded-waves.jpg');
 }
 
-.tw-bg-\[url\(\'\.\.\/src\/assets\/images\/us_background\.jpg\'\)\] {
-  background-image: url('../src/assets/images/us_background.jpg');
+.tw-bg-\[url\(\'\/images\/ocean-3\.jpg\'\)\] {
+  background-image: url('/images/ocean-3.jpg');
+}
+
+.tw-bg-\[url\(\'\/images\/us_background\.jpg\'\)\] {
+  background-image: url('/images/us_background.jpg');
+}
+
+.tw-bg-\[url\(\'\/images\/2\.jpg\'\)\] {
+  background-image: url('/images/2.jpg');
+}
+
+.tw-bg-\[url\(\'\/images\/faded-waves\.jpg\'\)\] {
+  background-image: url('/images/faded-waves.jpg');
 }
 
 .tw-bg-cover {
@@ -1178,6 +1217,10 @@ video {
 
 .tw-fill-gray-500 {
   fill: #6b7280;
+}
+
+.tw-fill-gray-700 {
+  fill: #374151;
 }
 
 .tw-fill-primary {
@@ -1218,12 +1261,12 @@ video {
   padding: 1rem;
 }
 
-.tw-p-7 {
-  padding: 1.75rem;
-}
-
 .tw-p-5 {
   padding: 1.25rem;
+}
+
+.tw-p-7 {
+  padding: 1.75rem;
 }
 
 .tw-px-1 {
@@ -1316,13 +1359,12 @@ video {
   padding-bottom: 4.5rem;
 }
 
-.tw-py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .tw-pb-3 {
   padding-bottom: 0.75rem;
+}
+
+.tw-pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .tw-pt-2 {
@@ -1335,6 +1377,10 @@ video {
 
 .tw-pt-7 {
   padding-top: 1.75rem;
+}
+
+.tw-text-left {
+  text-align: left;
 }
 
 .tw-text-center {
@@ -1388,12 +1434,12 @@ video {
   font-weight: 700;
 }
 
-.tw-font-semibold {
-  font-weight: 600;
-}
-
 .tw-font-extrabold {
   font-weight: 800;
+}
+
+.tw-font-semibold {
+  font-weight: 600;
 }
 
 .tw-capitalize {
@@ -1684,14 +1730,6 @@ video {
     max-width: 20rem;
   }
 
-  .sm\:tw-basis-1\/4 {
-    flex-basis: 25%;
-  }
-
-  .sm\:tw-basis-1\/3 {
-    flex-basis: 33.333333%;
-  }
-
   .sm\:tw-basis-1\/2 {
     flex-basis: 50%;
   }
@@ -1708,6 +1746,15 @@ video {
 @media (min-width: 768px) {
   .md\:tw-absolute {
     position: absolute;
+  }
+
+  .md\:tw-float-right {
+    float: right;
+  }
+
+  .md\:tw-mx-20 {
+    margin-left: 5rem;
+    margin-right: 5rem;
   }
 
   .md\:tw-mx-8 {
@@ -1739,6 +1786,10 @@ video {
     height: 350px;
   }
 
+  .md\:tw-h-\[450px\] {
+    height: 450px;
+  }
+
   .md\:tw-h-full {
     height: 100%;
   }
@@ -1749,10 +1800,6 @@ video {
 
   .md\:tw-w-\[210px\] {
     width: 210px;
-  }
-
-  .md\:tw-basis-1\/4 {
-    flex-basis: 25%;
   }
 
   .md\:tw-basis-1\/3 {
@@ -1773,6 +1820,10 @@ video {
 
   .md\:tw-flex-nowrap {
     flex-wrap: nowrap;
+  }
+
+  .md\:tw-place-items-center {
+    place-items: center;
   }
 
   .md\:tw-justify-center {
@@ -1815,9 +1866,23 @@ video {
     padding: 2.5rem;
   }
 
+  .md\:tw-text-center {
+    text-align: center;
+  }
+
+  .md\:tw-text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .md\:tw-text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:tw-text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
 
@@ -1956,12 +2021,4 @@ video {
     --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
-}
-
-.\[\&_svg\]\:tw-fill-primary svg {
-  fill: royalblue;
-}
-
-.\[\&_svg\]\:\!tw-fill-primary svg {
-  fill: royalblue !important;
 }
